--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<guava-version>19.0</guava-version>
 		<java.version>1.8</java.version>
+		<apache-commons-collections-version>4.1</apache-commons-collections-version>
 	</properties>
 
 	<dependencies>
@@ -41,6 +43,10 @@
 			<version>3.4</version>
 		</dependency>
 		
+		   <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+            </dependency>
 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -55,17 +61,37 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava-version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>${apache-commons-collections-version}</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>	
+
 	</dependencies>
 
 	<build>
 		<plugins>
+			 <!-- 
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+		   -->
+		    <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>				
 			</plugin>
 		</plugins>
 	</build>
